--- a/index.html
+++ b/index.html
@@ -13,18 +13,74 @@
     <h1>Sandeep Bhutiya</h1>
     <h2>Android Dev</h2>
 
-    <ul> 
+    <center>
+        <div>
+            A passionate programmer with knowledge of android development using Kotlin and Flutter. Knows enough Python to automate boring stuff and sometimes plays with Web Development for some good old CSS nostalgia.
+            <br/><br/>
+            Like to stay up to date with current tech and explore new software and various Linux stuff.
+        </div>
+    </center>
+
+    <ul>
         <li>
             <ul>
                 <h3>Skills</h3>
 
-                <li>Android <sup><i> Kotlin, Compose, Flutter</i></sup></li>
-                <li>Web <sup><i> Php, Html-Css-Js, Rest Api</i></sup></li>
-                <li>Desktop <sup><i> .Net, TornadoFX</i></sup></li>
-                <li>Python <sup><i> Bots, Web Scraping</i></sup></li>
-                <li>Other <sup><i> Java, C#, Dart, GDScript</i></sup></li>
-                <li>Tools <sup><i> Git, Godot, Office</i></sup></li>
-                <li>Interests <sup><i> Linux, FOSS, PC Building</i></sup></li>
+                <table cellspacing="8">
+                    <tr>
+                        <th rowspan="3">Android</th>
+                        <td>Kotlin</td>
+                    </tr>
+                    <tr><td>Compose</td></tr>
+                    <tr><td>Flutter</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="3">Web</th>
+                        <td>Php</td>
+                    </tr>
+                    <tr><td>Html-Css-Js</td></tr>
+                    <tr><td>Rest Api</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="2">Desktop</th>
+                        <td>.Net</td>
+                    </tr>
+                    <tr><td>TornadoFX</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="2">Python</th>
+                        <td>Bots</td>
+                    </tr>
+                    <tr><td>Scraping</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="3">Tools</th>
+                        <td>Git</td>
+                    </tr>
+                    <tr><td>Godot</td></tr>
+                    <tr><td>Office</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="4">Other</th>
+                        <td>Dart</td>
+                    </tr>
+                    <tr><td>Java</td></tr>
+                    <tr><td>GDScript</td></tr>
+                    <tr><td>C#</td></tr>
+
+                    <tr></tr>
+                    <tr>
+                        <th rowspan="3">Interests</th>
+                        <td>Linux</td>
+                    </tr>
+                    <tr><td>Foss</td></tr>
+                    <tr><td>PC Building</td></tr>
+                </table>
             </ul>
         </li>
 
