--- a/index.html
+++ b/index.html
@@ -9,106 +9,114 @@
     <title>Sandeep Bhutiya</title>
 </head>
 <body>
-    <img src="https://developer.android.com/images/brand/Android_Robot.svg">
-    <h1>Sandeep Bhutiya</h1>
-    <h2>Android Dev</h2>
+<img src="https://developer.android.com/images/brand/Android_Robot.svg">
+<h1>Sandeep Bhutiya</h1>
+<h2>Android Dev</h2>
 
-    <center>
-        <div>
-            A passionate programmer with knowledge of android development using Kotlin and Flutter. Knows enough Python to automate boring stuff and sometimes plays with Web Development for some good old CSS nostalgia.
-            <br/><br/>
-            Like to stay up to date with current tech and explore new software and various Linux stuff.
-        </div>
-    </center>
+<center>
+    <div>
+        A passionate programmer with knowledge of android development using Kotlin and Flutter.
+        Knows enough Python to automate boring stuff and sometimes plays with Web Development for
+        some good old CSS nostalgia.
+        <br/><br/>
+        Like to stay up to date with current tech and explore new software and various Linux stuff.
+    </div>
+</center>
 
-    <ul>
-        <li>
-            <ul>
-                <h3>Skills</h3>
+<ul>
+    <li>
+        <ul>
+            <h3>Education</h3>
 
-                <table cellspacing="8">
-                    <tr>
-                        <th rowspan="3">Android</th>
-                        <td>Kotlin</td>
-                    </tr>
-                    <tr><td>Compose</td></tr>
-                    <tr><td>Flutter</td></tr>
+            <table cellspacing="8">
+                <tr>
+                    <th>Masters</th>
+                    <td>in <b>2020</b> with <b>First Class</b></td>
+                </tr>
+                <tr>
+                    <th>Bachelors</th>
+                    <td>in <b>2017</b> with <b>First Distinction</b></td>
+                </tr>
+                <tr>
+                    <th>12<sup>th</sup></th>
+                    <td>in <b>2014</b> with <b>77.87 %</b></td>
+                </tr>
+                <tr>
+                    <th>10<sup>th</sup></th>
+                    <td>in <b>2012</b> with <b>79.60 %</b></td>
+                </tr>
+            </table>
+        </ul>
+    </li>
+    <li>
+        <ul>
+            <h3>Skills</h3>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="3">Web</th>
-                        <td>Php</td>
-                    </tr>
-                    <tr><td>Html-Css-Js</td></tr>
-                    <tr><td>Rest Api</td></tr>
+            <table cellspacing="8">
+                <tr>
+                    <th>Android</th>
+                    <td>Kotlin, Compose</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Web</th>
+                    <td>PHP, HTML, CSS, JS</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Desktop</th>
+                    <td>Flutter</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Python</th>
+                    <td>Scripting</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Tools</th>
+                    <td>Git, Office</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Other</th>
+                    <td>Java, Dart</td>
+                </tr>
+                <tr></tr>
+                <tr>
+                    <th>Interests</th>
+                    <td>FOSS, PC Building</td>
+                </tr>
+            </table>
+        </ul>
+    </li>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="2">Desktop</th>
-                        <td>.Net</td>
-                    </tr>
-                    <tr><td>TornadoFX</td></tr>
+    <li>
+        <ul>
+            <h3>Projects</h3>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="2">Python</th>
-                        <td>Bots</td>
-                    </tr>
-                    <tr><td>Scraping</td></tr>
+            <li><a href="https://play.google.com/store/apps/details?id=com.mdev.wallit">WALLit</a>
+            </li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra">Jamin Mitra</a></li>
+        </ul>
+    </li>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="3">Tools</th>
-                        <td>Git</td>
-                    </tr>
-                    <tr><td>Godot</td></tr>
-                    <tr><td>Office</td></tr>
+    <li>
+        <ul>
+            <h3>Contact</h3>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="4">Other</th>
-                        <td>Dart</td>
-                    </tr>
-                    <tr><td>Java</td></tr>
-                    <tr><td>GDScript</td></tr>
-                    <tr><td>C#</td></tr>
+            <li><a href="mailto:bhutiyasandeep@gmail.com">Email</a></li>
+        </ul>
+    </li>
 
-                    <tr></tr>
-                    <tr>
-                        <th rowspan="3">Interests</th>
-                        <td>Linux</td>
-                    </tr>
-                    <tr><td>Foss</td></tr>
-                    <tr><td>PC Building</td></tr>
-                </table>
-            </ul>
-        </li>
+    <li>
+        <ul>
+            <h3>Links</h3>
 
-        <li>
-            <ul>
-                <h3>Projects</h3>
-
-                <li><a href="https://play.google.com/store/apps/details?id=com.mdev.wallit">WALLit</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra">Jamin Mitra</a></li>
-            </ul>
-        </li>
-
-        <li>
-            <ul>
-                <h3>Contact</h3>
-
-                <li><a href="mailto:bhutiyasandeep@gmail.com">Email</a></li>
-            </ul>
-        </li>
-
-        <li>
-            <ul>
-                <h3>Links</h3>
-
-                <li><a href="https://github.com/SandeepBhutiya">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/sandeep-bhutiya/">LinkedIn</a></li>
-            </ul>
-        </li>
-    </ul>
+            <li><a href="https://github.com/SandeepBhutiya">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/sandeep-bhutiya/">LinkedIn</a></li>
+        </ul>
+    </li>
+</ul>
 </body>
 </html>
