- Improved Layout Structure

--- a/index.html
+++ b/index.html
@@ -25,97 +25,112 @@
 
 <ul>
     <li>
-        <ul>
-            <h3>Education</h3>
-
-            <table cellspacing="8">
-                <tr>
-                    <th>Masters</th>
-                    <td>in <b>2020</b> with <b>First Class</b></td>
-                </tr>
-                <tr>
-                    <th>Bachelors</th>
-                    <td>in <b>2017</b> with <b>First Distinction</b></td>
-                </tr>
-                <tr>
-                    <th>12<sup>th</sup></th>
-                    <td>in <b>2014</b> with <b>77.87 %</b></td>
-                </tr>
-                <tr>
-                    <th>10<sup>th</sup></th>
-                    <td>in <b>2012</b> with <b>79.60 %</b></td>
-                </tr>
-            </table>
-        </ul>
+        <table cellspacing="8">
+            <tr>
+                <th><h3>Education</h3></th>
+            </tr>
+            <tr>
+                <th>Masters</th>
+                <td>in <b>2020</b> with <b>First Class</b></td>
+            </tr>
+            <tr>
+                <th>Bachelors</th>
+                <td>in <b>2017</b> with <b>First Distinction</b></td>
+            </tr>
+            <tr>
+                <th>12<sup>th</sup></th>
+                <td>in <b>2014</b> with <b>77.87 %</b></td>
+            </tr>
+            <tr>
+                <th>10<sup>th</sup></th>
+                <td>in <b>2012</b> with <b>79.60 %</b></td>
+            </tr>
+        </table>
     </li>
     <li>
-        <ul>
-            <h3>Skills</h3>
-
-            <table cellspacing="8">
-                <tr>
-                    <th>Android</th>
-                    <td>Kotlin, Compose</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Web</th>
-                    <td>PHP, HTML, CSS, JS</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Desktop</th>
-                    <td>Flutter</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Python</th>
-                    <td>Scripting</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Tools</th>
-                    <td>Git, Office</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Other</th>
-                    <td>Java, Dart</td>
-                </tr>
-                <tr></tr>
-                <tr>
-                    <th>Interests</th>
-                    <td>FOSS, PC Building</td>
-                </tr>
-            </table>
-        </ul>
+        <table cellspacing="8">
+            <tr>
+                <th><h3>Skills</h3></th>
+            </tr>
+            <tr>
+                <th>Android</th>
+                <td>Kotlin, Compose</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Web</th>
+                <td>PHP, HTML, CSS, JS</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Desktop</th>
+                <td>Flutter</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Python</th>
+                <td>Scripting</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Tools</th>
+                <td>Git, Office</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Other</th>
+                <td>Java, Dart</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Interests</th>
+                <td>FOSS, PC Building</td>
+            </tr>
+        </table>
     </li>
 
     <li>
-        <ul>
-            <h3>Projects</h3>
+        <table cellspacing="8">
+            <tr>
+                <th><h3>Projects</h3></th>
+            </tr>
+            <tr>
+                <th>Android</th>
+                <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">WALLit</a>
+                </td>
+            </tr>
+            <tr>
+                <th></th>
+                <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">Jamin Mitra</a>
+                </td>
+            </tr>
+        </table>
 
-            <li><a href="https://play.google.com/store/apps/details?id=com.mdev.wallit">WALLit</a>
-            </li>
-            <li><a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra">Jamin Mitra</a></li>
-        </ul>
     </li>
 
     <li>
-        <ul>
-            <h3>Contact</h3>
-
-            <li><a href="mailto:bhutiyasandeep@gmail.com">Email</a></li>
-        </ul>
-    </li>
-
-    <li>
-        <ul>
-            <h3>Links</h3>
-
-            <li><a href="https://github.com/SandeepBhutiya">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/sandeep-bhutiya/">LinkedIn</a></li>
-        </ul>
+        <table cellspacing="8">
+            <tr>
+                <th><h3>Links</h3></th>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>
+                <a href="mailto:bhutiyasandeep@gmail.com">bhutiyasandeep@gmail.com</a>
+            </tr>
+             <tr>
+                <th>GitHub</th>
+                <td>
+                <a href="https://github.com/SandeepBhutiya" target="_blank">github.com/SandeepBhutiya</a>
+            </tr>
+             <tr>
+                <th>LinkedIn</th>
+                <td>
+                <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">linkedin.com/in/sandeep-bhutiya</a>
+            </tr>
+        </table>
     </li>
 </ul>
 </body>
