--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
             <tr>
                 <th>Email</th>
                 <td>
-                <a href="mailto:bhutiyasandeep@gmail.com">bhutiyasandeep@gmail.com</a>
+                <a href="mailto:bhutiyasandeep@gmail.com">Gmail</a>
             </tr>
              <tr>
-                <th>GitHub</th>
+                <th>Contact</th>
                 <td>
-                <a href="https://github.com/SandeepBhutiya" target="_blank">github.com/SandeepBhutiya</a>
+                <a href="https://github.com/SandeepBhutiya" target="_blank">GitHub</a>
             </tr>
              <tr>
-                <th>LinkedIn</th>
+                <th></th>
                 <td>
-                <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">linkedin.com/in/sandeep-bhutiya</a>
+                <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
             </tr>
         </table>
     </li>
