- Fixed more stuff

--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
     <li>
         <table cellspacing="8">
             <tr>
-                <th><h3>Links</h3></th>
+                <th><h3>About</h3></th>
             </tr>
             <tr>
-                <th>Email</th>
+                <th>Contact</th>
                 <td>
-                <a href="mailto:bhutiyasandeep@gmail.com">Gmail</a>
+                <a href="mailto:bhutiyasandeep@gmail.com">Email</a>
             </tr>
              <tr>
-                <th>Contact</th>
+                <th>Links</th>
                 <td>
                 <a href="https://github.com/SandeepBhutiya" target="_blank">GitHub</a>
             </tr>
