- Fixed even more stuff

--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
             <tr>
                 <th>Android</th>
                 <td>
-                    <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">WALLit</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit"
+                       target="_blank">WALLit</a>
                 </td>
             </tr>
             <tr>
                 <th></th>
                 <td>
-                    <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">Jamin Mitra</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra"
+                       target="_blank">Jamin Mitra</a>
                 </td>
             </tr>
         </table>
@@ -118,17 +120,21 @@
             <tr>
                 <th>Contact</th>
                 <td>
-                <a href="mailto:bhutiyasandeep@gmail.com">Email</a>
+                    <a href="mailto:bhutiyasandeep@gmail.com">Email</a>
+                </td>
             </tr>
-             <tr>
+            <tr>
                 <th>Links</th>
                 <td>
-                <a href="https://github.com/SandeepBhutiya" target="_blank">GitHub</a>
+                    <a href="https://github.com/SandeepBhutiya" target="_blank">GitHub</a>
+                </td>
             </tr>
-             <tr>
+            <tr>
                 <th></th>
                 <td>
-                <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/sandeep-bhutiya"
+                       target="_blank">LinkedIn</a>
+                </td>
             </tr>
         </table>
     </li>
