Replaced percentages with grades

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             </tr>
             <tr>
                 <th>12<sup>th</sup></th>
-                <td>in <b>2014</b> with <b>77.87 %</b></td>
+                <td>in <b>2014</b> with <b>Grade B1</b></td>
             </tr>
             <tr>
                 <th>10<sup>th</sup></th>
-                <td>in <b>2012</b> with <b>79.60 %</b></td>
+                <td>in <b>2012</b> with <b>Grade B1</b></td>
             </tr>
         </table>
     </li>
