--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
                 <th><h3>About</h3></th>
             </tr>
             <tr>
+                <th>Resume</th>
+                <td>
+                    <a href="Sandeep Bhutiya Resume.pdf">PDF</a>
+                </td>
+            </tr>
+            <tr>
                 <th>Contact</th>
                 <td>
                     <a href="mailto:bhutiyasandeep@gmail.com">Email</a>
