--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <li>
         <table cellspacing="8">
             <tr>
-                <th><h3>About</h3></th>
+                <th><h3>More</h3></th>
             </tr>
             <tr>
                 <th>Resume</th>
