--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <tr></tr>
             <tr>
                 <th>Web</th>
-                <td>PHP, HTML, CSS, JS</td>
+                <td>Flask, PHP, Rest APIs</td>
             </tr>
             <tr></tr>
             <tr>
@@ -69,7 +69,7 @@
             <tr></tr>
             <tr>
                 <th>Python</th>
-                <td>Scripting</td>
+                <td>Bots, Scraping</td>
             </tr>
             <tr></tr>
             <tr>
@@ -84,7 +84,7 @@
             <tr></tr>
             <tr>
                 <th>Interests</th>
-                <td>FOSS, PC Building</td>
+                <td>Linux, PC Building</td>
             </tr>
         </table>
     </li>
