--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <tr>
                 <th>Resume</th>
                 <td>
-                    <a href="Sandeep Bhutiya Resume.pdf">PDF</a>
+                    <a href="Sandeep Bhutiya Resume.pdf" target="_blank">PDF</a>
                 </td>
             </tr>
             <tr>
