--- a/index.html
+++ b/index.html
@@ -31,19 +31,30 @@
             </tr>
             <tr>
                 <th>Masters</th>
-                <td>in <b>2020</b> with <b>First Class</b></td>
+                <td>
+                    in <b>2020</b> <br> 
+                    with <b>First Class</b>
+                </td>
             </tr>
             <tr>
                 <th>Bachelors</th>
-                <td>in <b>2017</b> with <b>First Distinction</b></td>
+                <td>
+                    in <b>2017</b> <br>
+                    with <b>First Distinction</b>
+                </td>
             </tr>
             <tr>
                 <th>12<sup>th</sup></th>
-                <td>in <b>2014</b> with <b>Grade B1</b></td>
+                <td>
+                    in <b>2014</b> <br>
+                    with <b>Grade B1</b>
+                </td>
             </tr>
             <tr>
                 <th>10<sup>th</sup></th>
-                <td>in <b>2012</b> with <b>Grade B1</b></td>
+                <td>
+                    in <b>2012</b> <br> 
+                    with <b>Grade B1</b></td>
             </tr>
         </table>
     </li>
