--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 </td>
             </tr>
             <tr>
-                <th>12<sup>th</sup></th>
+                <th>HSC</th>
                 <td>
                     in <b>2014</b> <br>
                     with <b>Grade B1</b>
                 </td>
             </tr>
             <tr>
-                <th>10<sup>th</sup></th>
+                <th>SSC</th>
                 <td>
                     in <b>2012</b> <br> 
                     with <b>Grade B1</b></td>
