- added metadata - removed resume

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Sandeep, Sandeep Bhutiya, Android Developer, Kotlin">
+    <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link type="text/css" rel="stylesheet" href="style.css"/>
-
     <title>Sandeep Bhutiya</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
 
 <center>
     <div>
-        A passionate programmer with knowledge of android development using Kotlin and Flutter.
+        A passionate programmer with knowledge of android development using Kotlin.
         Knows enough Python to automate boring stuff and sometimes plays with Web Development for
         some good old CSS nostalgia.
         <br/><br/>
@@ -32,7 +33,7 @@
             <tr>
                 <th>Masters</th>
                 <td>
-                    in <b>2020</b> <br> 
+                    in <b>2020</b> <br>
                     with <b>First Class</b>
                 </td>
             </tr>
@@ -53,7 +54,7 @@
             <tr>
                 <th>10<sup>th</sup></th>
                 <td>
-                    in <b>2012</b> <br> 
+                    in <b>2012</b> <br>
                     with <b>Grade B1</b></td>
             </tr>
         </table>
@@ -127,12 +128,6 @@
         <table cellspacing="8">
             <tr>
                 <th><h3>More</h3></th>
-            </tr>
-            <tr>
-                <th>Resume</th>
-                <td>
-                    <a href="Sandeep Bhutiya Resume.pdf" target="_blank">PDF</a>
-                </td>
             </tr>
             <tr>
                 <th>Contact</th>
