--- a/index.html
+++ b/index.html
@@ -28,6 +28,55 @@
     <li>
         <table cellspacing="8">
             <tr>
+                <th><h3>Skills</h3></th>
+            </tr>
+            <tr>
+                <th>Android</th>
+                <td>Kotlin <br>
+                    Compose <br>
+                </td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Web</th>
+                <td>Flask <br>
+                    Php <br>
+                    Rest Api
+                </td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Desktop</th>
+                <td>Flutter</td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Tools</th>
+                <td>Git <br>
+                    Office
+                </td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Other</th>
+                <td>Python <br>
+                    Dart <br>
+                    Java
+                </td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <th>Interests</th>
+                <td>Linux <br>
+                    PC Building
+                </td>
+            </tr>
+        </table>
+    </li>
+
+    <li>
+        <table cellspacing="8">
+            <tr>
                 <th><h3>Education</h3></th>
             </tr>
             <tr>
@@ -56,47 +105,6 @@
                 <td>
                     in <b>2012</b> <br>
                     with <b>Grade B1</b></td>
-            </tr>
-        </table>
-    </li>
-    <li>
-        <table cellspacing="8">
-            <tr>
-                <th><h3>Skills</h3></th>
-            </tr>
-            <tr>
-                <th>Android</th>
-                <td>Kotlin, Compose</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Web</th>
-                <td>Flask, PHP, Rest APIs</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Desktop</th>
-                <td>Flutter</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Python</th>
-                <td>Bots, Scraping</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Tools</th>
-                <td>Git, Office</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Other</th>
-                <td>Java, Dart</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Interests</th>
-                <td>Linux, PC Building</td>
             </tr>
         </table>
     </li>
