--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
                        target="_blank">Jamin Mitra</a>
                 </td>
             </tr>
+            <tr>
+                <th>Web</th>
+                <td>
+                    <a href="https://pearltik.github.io" target="_blank">Pearltik</a>
+                </td>
+            </tr>
         </table>
 
     </li>
@@ -146,7 +152,7 @@
             <tr>
                 <th>Links</th>
                 <td>
-                    <a href="https://github.com/SandeepBhutiya" target="_blank">GitHub</a>
+                    <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
                 </td>
             </tr>
             <tr>
