- Updated website design

--- a/index.html
+++ b/index.html
@@ -1,169 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Sandeep, Sandeep Bhutiya, Android Developer, Kotlin">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
     <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+
+    <link rel="stylesheet" href="theme/style.css" />
+
     <title>Sandeep Bhutiya</title>
 </head>
+
 <body>
-<img src="https://developer.android.com/images/brand/Android_Robot.svg">
-<h1>Sandeep Bhutiya</h1>
-<h2>Android Dev</h2>
+    <section class="center" id="home">
+        <div>
+            <img src="theme/logo.svg">
+            <h1>Sandeep Bhutiya</h1>
+            <h2>Android Dev</h2>
 
-<center>
-    <div>
-        A passionate programmer with knowledge of android development using Kotlin.
-        Knows enough Python to automate boring stuff and sometimes plays with Web Development for
-        some good old CSS nostalgia.
-        <br/><br/>
-        Like to stay up to date with current tech and explore new software and various Linux stuff.
-    </div>
-</center>
 
-<ul>
-    <li>
-        <table cellspacing="8">
-            <tr>
-                <th><h3>Skills</h3></th>
-            </tr>
-            <tr>
-                <th>Android</th>
-                <td>Kotlin <br>
-                    Compose <br>
-                </td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Web</th>
-                <td>Flask <br>
-                    Php <br>
-                    Rest Api
-                </td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Desktop</th>
-                <td>Flutter</td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Tools</th>
-                <td>Git <br>
-                    Office
-                </td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Other</th>
-                <td>Python <br>
-                    Dart <br>
-                    Java
-                </td>
-            </tr>
-            <tr></tr>
-            <tr>
-                <th>Interests</th>
-                <td>Linux <br>
-                    PC Building
-                </td>
-            </tr>
-        </table>
-    </li>
+            <p>
+                A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> language.
+                Familiar with <b>modern android development</b> practices like
+                <b>Compose, MVVM Architecture, Coroutins, RoomDB, Retrofit</b> etc. Have experience of end-to-end
+                application development lifecycle, from conceptualizing to play store publishing.
+                <br /><br />
+                Like to stay up to date with current tech and explore new software and various Linux stuff.
+            </p>
+        </div>
+        <a href="#skills-and-education" class="btn next-skills">⌵</a>
+    </section>
 
-    <li>
-        <table cellspacing="8">
-            <tr>
-                <th><h3>Education</h3></th>
-            </tr>
-            <tr>
-                <th>Masters</th>
-                <td>
-                    in <b>2020</b> <br>
-                    with <b>First Class</b>
-                </td>
-            </tr>
-            <tr>
-                <th>Bachelors</th>
-                <td>
-                    in <b>2017</b> <br>
-                    with <b>First Distinction</b>
-                </td>
-            </tr>
-            <tr>
-                <th>HSC</th>
-                <td>
-                    in <b>2014</b> <br>
-                    with <b>Grade B1</b>
-                </td>
-            </tr>
-            <tr>
-                <th>SSC</th>
-                <td>
-                    in <b>2012</b> <br>
-                    with <b>Grade B1</b></td>
-            </tr>
-        </table>
-    </li>
+    <section class="center" id="skills-and-education">
+        <div class="cards">
+            <ul class="edu">
+                <h2>Education</h2>
+                <li>
+                    <h3>Masters</h3>
+                    <ul>
+                        <li>in <b>2020</b></li>
+                        <li>with <b>First Class</b></li>
+                    </ul>
+                </li>
 
-    <li>
-        <table cellspacing="8">
-            <tr>
-                <th><h3>Projects</h3></th>
-            </tr>
-            <tr>
-                <th>Android</th>
-                <td>
-                    <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit"
-                       target="_blank">WALLit</a>
-                </td>
-            </tr>
-            <tr>
-                <th></th>
-                <td>
-                    <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra"
-                       target="_blank">Jamin Mitra</a>
-                </td>
-            </tr>
-            <tr>
-                <th>Web</th>
-                <td>
-                    <a href="https://pearltik.github.io" target="_blank">Pearltik</a>
-                </td>
-            </tr>
-        </table>
+                <li>
+                    <h3>Bachelors</h3>
+                    <ul>
+                        <li>in <b>2017</b></li>
+                        <li>with <b>First Distinction</b></li>
+                    </ul>
+                </li>
 
-    </li>
+                <li>
+                    <h3>HSC</h3>
+                    <ul>
+                        <li>in <b>2014</b></li>
+                        <li>with <b>Grade B1</b></li>
+                    </ul>
+                </li>
 
-    <li>
-        <table cellspacing="8">
-            <tr>
-                <th><h3>More</h3></th>
-            </tr>
-            <tr>
-                <th>Contact</th>
-                <td>
-                    <a href="mailto:bhutiyasandeep@gmail.com">Email</a>
-                </td>
-            </tr>
-            <tr>
-                <th>Links</th>
-                <td>
-                    <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
-                </td>
-            </tr>
-            <tr>
-                <th></th>
-                <td>
-                    <a href="https://www.linkedin.com/in/sandeep-bhutiya"
-                       target="_blank">LinkedIn</a>
-                </td>
-            </tr>
-        </table>
-    </li>
-</ul>
+                <li>
+                    <h3>SSC</h3>
+                    <ul>
+                        <li>in <b>2012</b></li>
+                        <li>with <b>Grade B1</b></li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="skills">
+                <h2>Skills</h2>
+                <li>
+                    <h3>Android</h3>
+                    <ul>
+                        <li>Compose</li>
+                        <li>Kotlin</li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Web</h3>
+                    <ul>
+                        <li>Flask</li>
+                        <li>PHP</li>
+                        <li>REST API</li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Other</h3>
+                    <ul>
+                        <li>Flutter</li>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>Git</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <a href="#projects" class="btn next-projects">⌵</a>
+    </section>
+
+    <section class="center" id="projects">
+        <h2>Projects</h2>
+        <div class="cards">
+            <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">
+                <h3>WALLit</h3>
+                <p>Android</p>
+                <span>↗</span>
+            </a>
+
+            <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">
+                <h3>Jamin Mitra</h3>
+                <p>Android</p>
+                <span>↗</span>
+            </a>
+
+            <a href="https://pearltik.github.io" target="_blank">
+                <h3>Pearltik</h3>
+                <p>Web</p>
+                <span>↗</span>
+            </a>
+        </div>
+        <a href="#contact" class="btn next-contact">⌵</a>
+    </section>
+
+    <section class="center" id="contact">
+        <h2>Contact</h2>
+
+        <div>
+            <a href="mailto:bhutiyasandeep@gmail.com" target="_blank">Email</a>
+            <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
+        </div>
+
+        <a href="#" class="btn to-top">⌵</a>
+    </section>
 </body>
+
 </html>
