- fixed button symbol

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
+    <meta name="keywords"
+        content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
     <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,7 +32,7 @@
                 Like to stay up to date with current tech and explore new software and various Linux stuff.
             </p>
         </div>
-        <a href="#skills-and-education" class="btn next-skills">⌵</a>
+        <a href="#skills-and-education" class="btn next-skills"></a>
     </section>
 
     <section class="center" id="skills-and-education">
@@ -102,7 +103,7 @@
             </ul>
         </div>
 
-        <a href="#projects" class="btn next-projects">⌵</a>
+        <a href="#projects" class="btn next-projects"></a>
     </section>
 
     <section class="center" id="projects">
@@ -126,7 +127,7 @@
                 <span>↗</span>
             </a>
         </div>
-        <a href="#contact" class="btn next-contact">⌵</a>
+        <a href="#contact" class="btn next-contact"></a>
     </section>
 
     <section class="center" id="contact">
@@ -138,7 +139,7 @@
             <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
         </div>
 
-        <a href="#" class="btn to-top">⌵</a>
+        <a href="#" class="btn to-top"></a>
     </section>
 </body>
 
