--- a/index.html
+++ b/index.html
@@ -113,21 +113,18 @@
             <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">
                 <h3>WALLit</h3>
                 <p>Android</p>
-                <p class="print-only">https://play.google.com/store/apps/details?id=com.mdev.wallit</p>
                 <span>↗</span>
             </a>
 
             <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">
                 <h3>Jamin Mitra</h3>
                 <p>Android</p>
-                <p class="print-only">https://play.google.com/store/apps/details?id=com.mdev.jameenmitra</p>
                 <span>↗</span>
             </a>
 
             <a href="https://pearltik.github.io" target="_blank">
                 <h3>Pearltik</h3>
                 <p>Web</p>
-                <p class="print-only">https://pearltik.github.io</p>
                 <span>↗</span>
             </a>
         </div>
@@ -138,24 +135,13 @@
         <h2>Contact</h2>
 
         <div>
-            <a href="mailto:bhutiyasandeep@gmail.com" target="_blank">
-                Email
-                <p class="print-only"><br>bhutiyasandeep@gmail.com</p>
-            </a>
-            <a href="https://github.com/sanedeep" target="_blank">
-                GitHub
-                <p class="print-only"><br>https://github.com/sanedeep</p>
-            </a>
-            <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">
-                LinkedIn
-                <p class="print-only"><br>https://www.linkedin.com/in/sandeep-bhutiya</p>
-            </a>
+            <a href="mailto:bhutiyasandeep@gmail.com" target="_blank">Email</a>
+            <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
         </div>
 
         <a href="#" class="btn to-top"></a>
     </section>
-
-    <span class="btn-print" onclick="window.print()">Print</span>
 </body>
 
 </html>
