--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>
                 A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> language.
                 Familiar with <b>modern android development</b> practices like
-                <b>Compose, MVVM Architecture, Coroutines, RoomDB, Retrofit</b> etc. Have experience of end-to-end
+                <b>Compose, MVVM Architecture, Coroutines, RoomDB, Retrofit, Koin DI</b> etc. Have experience of end-to-end
                 application development lifecycle, from conceptualizing to play store publishing.
                 <br /><br />
                 Like to stay up to date with current tech and explore new software and various Linux stuff.
