--- a/index.html
+++ b/index.html
@@ -6,142 +6,150 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-        content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
+          content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
     <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="theme/style.css" />
+    <link rel="stylesheet" href="theme/style.css"/>
 
     <title>Sandeep Bhutiya</title>
 </head>
 
 <body>
-    <section class="center" id="home">
-        <div>
-            <img src="theme/logo.svg">
-            <h1>Sandeep Bhutiya</h1>
-            <h2>Android Dev</h2>
+<section class="center" id="home">
+    <div>
+        <img src="theme/logo.svg">
+        <h1>Sandeep Bhutiya</h1>
+        <h2>Android Dev</h2>
 
 
-            <p>
-                A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> language.
-                Familiar with <b>modern android development</b> practices like
-                <b>Compose, MVVM Architecture, Coroutines, RoomDB, Retrofit, Koin DI</b> etc. Have experience of end-to-end
-                application development lifecycle, from conceptualizing to play store publishing.
-                <br /><br />
-                Like to stay up to date with current tech and explore new software and various Linux stuff.
-            </p>
-        </div>
-        <a href="#skills-and-education" class="btn next-skills"></a>
-    </section>
+        <p>
+            A passionate programmer with knowledge of <b>android development</b> using <b>kotlin</b> language.
+        </p>
+        <p>
+            Familiar with <b>modern android development</b> practices like <b>Compose, Material 3, MVVM Architecture, Coroutines, Koin DI, RoomDB, DataStore, Retrofit, Coil IL</b> etc.
+        </p>
+        <p>
+            Have experience of working with <b>Firebase, Google Cloud, Play Services, 3rd party APIs, Multilingual Apps</b> and end-to-end application <b>development lifecycle</b>, from conceptualizing to play store publishing.
 
-    <section class="center" id="skills-and-education">
-        <div class="cards">
-            <ul class="edu">
+        </p>
+        <p>
+            Like to stay up to date with current tech and explore new software and various Linux stuff.
+        </p>
+    </div>
+    <a href="#skills-and-education" class="btn next-skills"></a>
+</section>
 
-                <li>
-                    <h2>Education</h2>
-                    <h3>Masters</h3>
-                    <ul>
-                        <li>in <b>2020</b></li>
-                        <li>with <b>First Class</b></li>
-                    </ul>
-                </li>
+<section class="center" id="skills-and-education">
+    <div class="cards">
+        <ul class="edu">
 
-                <li>
-                    <h3>Bachelors</h3>
-                    <ul>
-                        <li>in <b>2017</b></li>
-                        <li>with <b>First Distinction</b></li>
-                    </ul>
-                </li>
+            <li>
+                <h2>Education</h2>
+                <h3>Masters</h3>
+                <ul>
+                    <li>in <b>2020</b></li>
+                    <li>with <b>First Class</b></li>
+                </ul>
+            </li>
 
-                <li>
-                    <h3>HSC</h3>
-                    <ul>
-                        <li>in <b>2014</b></li>
-                        <li>with <b>Grade B1</b></li>
-                    </ul>
-                </li>
+            <li>
+                <h3>Bachelors</h3>
+                <ul>
+                    <li>in <b>2017</b></li>
+                    <li>with <b>First Distinction</b></li>
+                </ul>
+            </li>
 
-                <li>
-                    <h3>SSC</h3>
-                    <ul>
-                        <li>in <b>2012</b></li>
-                        <li>with <b>Grade B1</b></li>
-                    </ul>
-                </li>
-            </ul>
+            <li>
+                <h3>HSC</h3>
+                <ul>
+                    <li>in <b>2014</b></li>
+                    <li>with <b>Grade B1</b></li>
+                </ul>
+            </li>
 
-            <ul class="skills">
-                <li>
-                    <h2>Skills</h2>
-                    <h3>Android</h3>
-                    <ul>
-                        <li>Compose</li>
-                        <li>Kotlin</li>
-                    </ul>
-                </li>
+            <li>
+                <h3>SSC</h3>
+                <ul>
+                    <li>in <b>2012</b></li>
+                    <li>with <b>Grade B1</b></li>
+                </ul>
+            </li>
+        </ul>
 
-                <li>
-                    <h3>Web</h3>
-                    <ul>
-                        <li>Flask</li>
-                        <li>PHP</li>
-                        <li>REST API</li>
-                    </ul>
-                </li>
+        <ul class="skills">
+            <li>
+                <h2>Skills</h2>
+                <h3>Android</h3>
+                <ul>
+                    <li>Compose</li>
+                    <li>Kotlin</li>
+                </ul>
+            </li>
 
-                <li>
-                    <h3>Other</h3>
-                    <ul>
-                        <li>Flutter</li>
-                        <li>Python</li>
-                        <li>Java</li>
-                        <li>Git</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+            <li>
+                <h3>Web</h3>
+                <ul>
+                    <li>Flask</li>
+                    <li>Rest Api</li>
+                </ul>
+            </li>
 
-        <a href="#projects" class="btn next-projects"></a>
-    </section>
+            <li>
+                <h3>Other</h3>
+                <ul>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>Git</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 
-    <section class="center" id="projects">
-        <h2>Projects</h2>
-        <div class="cards">
-            <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">
-                <h3>WALLit</h3>
-                <p>Android</p>
-                <span>↗</span>
-            </a>
+    <a href="#projects" class="btn next-projects"></a>
+</section>
 
-            <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">
-                <h3>Jamin Mitra</h3>
-                <p>Android</p>
-                <span>↗</span>
-            </a>
+<section class="center" id="projects">
+    <h2>Projects</h2>
+    <div class="cards">
+        <a href="https://play.google.com/store/apps/details?id=com.mdev.wallit" target="_blank">
+            <h3>WALLit</h3>
+            <p>Android</p>
+            <span>↗</span>
+        </a>
 
-            <a href="https://pearltik.github.io" target="_blank">
-                <h3>Pearltik</h3>
-                <p>Web</p>
-                <span>↗</span>
-            </a>
-        </div>
-        <a href="#contact" class="btn next-contact"></a>
-    </section>
+        <a href="https://play.google.com/store/apps/details?id=com.mdev.jameenmitra" target="_blank">
+            <h3>Jamin Mitra</h3>
+            <p>Android</p>
+            <span>↗</span>
+        </a>
 
-    <section class="center" id="contact">
-        <h2>Contact</h2>
+        <a href="https://pearltik.githukb.io" target="_blank">
+            <h3>Pearltik</h3>
+            <p>Web</p>
+            <span>↗</span>
+        </a>
 
-        <div>
-            <a href="mailto:bhutiyasandeep@gmail.com" target="_blank">Email</a>
-            <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
-        </div>
+         <a href="https://en.wikipedia.org/wiki/Client_confidentiality" target="_blank">
+            <h3><i>Other 4+</i></h3>
+            <p><i>Various</i></p>
+            <span>↗</span>
+        </a>
+    </div>
+    <a href="#contact" class="btn next-contact"></a>
+</section>
 
-        <a href="#" class="btn to-top"></a>
-    </section>
+<section class="center" id="contact">
+    <h2>Contact</h2>
+
+    <div>
+        <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
+    </div>
+
+    <a href="#" class="btn to-top"></a>
+</section>
 </body>
 
 </html>
