- updated skills section

--- a/index.html
+++ b/index.html
@@ -83,24 +83,20 @@
                 <h2>Skills</h2>
                 <h3>Android</h3>
                 <ul>
-                    <li>Compose</li>
                     <li>Kotlin</li>
+                    <li>Compose</li>
+                    <li>MVVM</li>
+                    <li>Firebase</li>
+                    <li>G Cloud</li>
+                    <li>Publishing</li>
                 </ul>
             </li>
-
-            <li>
-                <h3>Web</h3>
-                <ul>
-                    <li>Flask</li>
-                    <li>Rest Api</li>
-                </ul>
-            </li>
-
             <li>
                 <h3>Other</h3>
                 <ul>
                     <li>Python</li>
-                    <li>Java</li>
+                    <li>Flask</li>
+                    <li>Linux</li>
                     <li>Git</li>
                 </ul>
             </li>
