--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <span>↗</span>
         </a>
 
-        <a href="https://pearltik.githukb.io" target="_blank">
+        <a href="https://pearltik.github.io" target="_blank">
             <h3>Pearltik</h3>
             <p>Web</p>
             <span>↗</span>
