--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           content="Sandeep, Sandeep Bhutiya, Sanedeep, Android Developer, Native Android Developer, Kotlin, Compose">
     <meta name="author" content="Sandeep Bhutiya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="stylesheet" href="theme/style.css"/>
 
     <title>Sandeep Bhutiya</title>
@@ -142,6 +142,7 @@
     <div>
         <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
+        <a rel="me" href="https://mas.to/@sanedeep" target="_blank">Mastodon</a>
     </div>
 
     <a href="#" class="btn to-top"></a>
