--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div>
         <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/sandeep-bhutiya" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sanedeep" target="_blank">LinkedIn</a>
         <a rel="me" href="https://mas.to/@sanedeep" target="_blank">Mastodon</a>
     </div>
 
