--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
             <span>↗</span>
         </a>
     </div>
-    <a href="#contact" class="btn next-contact"></a>
+    <a href="#links" class="btn next-contact"></a>
 </section>
 
-<section class="center" id="contact">
-    <h2>Contact</h2>
+<section class="center" id="links">
+    <h2>Links</h2>
 
     <div>
         <a href="https://github.com/sanedeep" target="_blank">GitHub</a>
