--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <span>↗</span>
         </a>
     </div>
-    <a href="#links" class="btn next-contact"></a>
+    <a href="#links" class="btn next-links"></a>
 </section>
 
 <section class="center" id="links">
